--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,9 +10,8 @@
     padding: 10px;
 }
 
-.tr1
-{
-    padding:10px;
+.tr1 {
+    padding: 10px;
 }
 
 .img1 {
@@ -22,24 +21,22 @@
 .img2 {
     margin-top: 65px;
 }
-.form2
-{
-    margin-top:5%;
-}
-.table1
-{
-    border:none;
-    margin-top:20px;
-    border:1px solid black;
-}
-td
-{
-    border:none;
-    padding:7px;
-}
-th
-{
-    padding:7px;
+
+.form2 {
+    margin-top: 5%;
 }
 
+.table1 {
+    border: none;
+    margin-top: 20px;
+    border: 1px solid black;
+}
 
+td {
+    border: none;
+    padding: 7px;
+}
+
+th {
+    padding: 7px;
+}
